2002-08-27  Jeff Freedman  <jeff@amy.nerble.net>

	* effects.cc:  It's now okay to show rain/clouds when gumps are shown.
	* tqueue.cc: Got to fix time when tqueue is paused (like when
	gumps are open).
	* gumps/Spellbook_gump.cc:  Close all gumps after casting spell.
	* objs/objs.cc: Weapons with 0 HP's should never do damage.

2002-08-26  Aurelien Marchand  <artaxerxes@users.sf.net>

	* configure.in: Added -FMOPL and disabled debug in configure.in for the zaurus. 
	* audio/Midi.cc: Make it work on the zaurus
	* imagewin/imagewin.cc: prevent fullscreen at all cost for the zaurus or it would crash

2002-08-23  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.h: Fixed "in_usecode()" so it works with new
	stack-frames. 
	* usecode/ucsched.cc (Usecode_script): Don't purge script if it
	has already started.

2002-08-22  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/objs.h (public): Added is_pos_invalid().
	* effects.cc:  Don't delete 'explode' if already off map.

2002-15-12  Aurelien Marchand  <artaxerxes@users.sf.net>

	* audio/Audio.cc: corrected cast error to prevent bus error on Zaurus

2002-08-12  Aurelien Marchand  <artaxerxes@users.sf.net>

	* shapes/fontgen.cc: prevent freetype if building for Zaurus.

2002-08-12  Jeff Freedman  <jeff@amy.nerble.net>

	* schedule.h,usecode/intrinsics.cc:  Always use bed that was
	double-clicked. 
	* schedule.cc:  Bug in getting tz.
	* usecode/conversation.cc:  Repaint when you pop_answers().

2002-08-11  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/intrinsics.cc (public): Explosion should explode the
	outermost container.

2002-08-09  Ryan Nunn  <triforce@merlin.net.au>
	* audio/midi_drivers/fmopl_midi.*, audio/midi_drivers/fmopldrv.cc,
	  gumps/AudioOptions_gump.cc : Fixing compiling issues
	* audio/midi_drivers/Makefile.am: Added fmopl files to the makefile,
	  but I'm not going to touch the configure script.

2002-08-07  Ryan Nunn  <triforce@merlin.net.au>
	* cheat_screen.cc : Added missing tqueue header.
